# Algo-Trade-101

Notifier/: pyproject.toml
