[tool.poetry]
name = "notifier"
version = "0.1.0"
description = ""
authors = ["wontae_coin <wontae.coin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pybithumb = "^1.0.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
